// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`HeaderBreadcrumbs renders updates to the breadcrumbs observable 1`] = `
=======
exports[`HeaderBreadcrumbs renders updates to the breadcrumbs$ observable 1`] = `
>>>>>>> ff49a1c6742d67fa5daed569ff3bb269783f6bd1
<span
  aria-current="page"
  className="euiBreadcrumb euiBreadcrumb--last"
  title="First"
>
  First
</span>
`;

<<<<<<< HEAD
exports[`HeaderBreadcrumbs renders updates to the breadcrumbs observable 2`] = `
=======
exports[`HeaderBreadcrumbs renders updates to the breadcrumbs$ observable 2`] = `
>>>>>>> ff49a1c6742d67fa5daed569ff3bb269783f6bd1
Array [
  <EuiLink
    className="euiBreadcrumb"
    color="subdued"
    title="First"
    type="button"
  >
    <button
      className="euiLink euiLink--subdued euiBreadcrumb"
      title="First"
      type="button"
    >
      First
    </button>
  </EuiLink>,
  <button
    className="euiLink euiLink--subdued euiBreadcrumb"
    title="First"
    type="button"
  >
    First
  </button>,
  <span
    aria-current="page"
    className="euiBreadcrumb euiBreadcrumb--last"
    title="Second"
  >
    Second
  </span>,
]
`;

<<<<<<< HEAD
exports[`HeaderBreadcrumbs renders updates to the breadcrumbs observable 3`] = `null`;
=======
exports[`HeaderBreadcrumbs renders updates to the breadcrumbs$ observable 3`] = `null`;
>>>>>>> ff49a1c6742d67fa5daed569ff3bb269783f6bd1
